# fastapi_project

./: README.md  pyproject.toml
src/: config.py  main.py  router.py
